# reporters

./: CATALOG.yaml  README.md  REPORTER_DESIGN.md  pyproject.toml
.github/workflows/: build-among-them-summarizer-image.yml  build-cogs-vs-clips-summarizer-image.yml  build-default-reporter-image.yml  build-paint-arena-summarizer-image.yml  validate-catalog.yml
docs/: COWORLD_REFERENCE.md  REPORTER_DESIGN.md
docs/reports/: code-docs-gap-2026-05-23.md
reporters/among_them/among_them_summarizer/: DESIGN.md  Dockerfile  Dockerfile.dockerignore  README.md  among_them_summarizer.py  build.sh  smoke.sh
reporters/among_them/among_them_summarizer/smoke/: make_bundle.py  make_fixtures.py
reporters/among_them/among_them_summarizer/smoke/fixtures/: metadata.json  replay.bitreplay  results.json
reporters/among_them/among_them_summarizer/tests/: conftest.py  fixtures.py  test_phase2.py  test_phase3.py  test_phase4.py  test_phase5.py  test_phase6.py  test_skeleton.py
reporters/cogs_vs_clips/cogs_vs_clips_summarizer/: Dockerfile  Dockerfile.dockerignore  README.md  build.sh  cogs_vs_clips_summarizer.py  smoke.sh
reporters/cogs_vs_clips/cogs_vs_clips_summarizer/smoke/: make_bundle.py
reporters/cogs_vs_clips/cogs_vs_clips_summarizer/tests/: cogs_vs_clips_fixtures.py  conftest.py  test_cogs_vs_clips_summarizer.py
reporters/default/: Dockerfile  Dockerfile.dockerignore  README.md  build.sh  default_reporter.py  requirements.txt  smoke.sh
reporters/default/smoke/: make_bundle.py
reporters/default/tests/: conftest.py  test_default_reporter.py
reporters/paint_arena/paint_arena_summarizer/: DESIGN.md  Dockerfile  Dockerfile.dockerignore  README.md  build.sh  paint_arena_summarizer.py  requirements.txt  smoke.sh
reporters/paint_arena/paint_arena_summarizer/smoke/: make_bundle.py
reporters/paint_arena/paint_arena_summarizer/smoke/fixtures/: manifest.json  metadata.json  replay.json  results.json
reporters/paint_arena/paint_arena_summarizer/tests/: conftest.py  fixtures.py  test_http_io.py  test_paint_arena_summarizer.py
reporters/reporter_sdk/: README.md  pyproject.toml
reporters/reporter_sdk/reporter_sdk/: __init__.py  bundle.py  event_log.py  io.py  output_manifest.py  zip_writer.py
reporters/reporter_sdk/tests/: test_bundle.py  test_event_log.py  test_io.py  test_output_manifest.py  test_zip_writer.py
reporters/templates/: README.md
reporters/templates/summarizer_template/: Dockerfile  Dockerfile.dockerignore  README.md  build.sh  requirements.txt  smoke.sh  summarizer.py
reporters/templates/summarizer_template/smoke/: make_bundle.py
reporters/templates/summarizer_template/tests/: conftest.py  test_summarizer_template.py
tools/: validate_catalog.py
tools/tests/: conftest.py  test_validate_catalog.py
