[project]
name = "reporters-workspace"
version = "0.1.0"
description = "Workspace anchor for the reporters repo. The shared, pip-installable Python package for reporter authors lives at reporters/reporter_sdk/; concrete reporter implementations live under reporters/<coworld>/."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[dependency-groups]
dev = [
    "pyarrow>=24.0.0",
    "pydantic>=2.13.4",
    "pytest>=9.0.3",
    "requests>=2.34.2",
]
