[project]
name = "reporter-sdk"
version = "0.0.0"
description = "Shared primitives and helpers for coworld reporter implementations (envelope construction, env-supplied URI I/O, contract-aligned types). Imported by templates and concrete reporters in this repo."
readme = "README.md"
requires-python = ">=3.13"
dependencies = []

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reporter_sdk"]
