[project]
name = "reporter-sdk"
version = "0.1.1"
description = "Shared primitives and helpers for coworld reporter implementations (envelope construction, env-supplied URI I/O, contract-aligned types). Imported by templates and concrete reporters in this repo."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "pyarrow>=18,<25",
    "pydantic>=2,<3",
    "requests>=2.32,<3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["reporter_sdk"]
